--- a/index.html
+++ b/index.html
@@ -147,31 +147,20 @@
 		 	<p>SpeechBrain leverages the most advanced deep learning technologies, including methods for self-supervised learning, continual learning, diffusion models, Bayesian deep learning, and interpretable neural networks.</p>
 		 </div>
 		 </div>
-              <div class="col-lg-4">
-        				<div class="work_item">
-        					<i class="lnr lnr-layers"></i>
-        					<a href="#"><h4>Other Tasks</h4></a>
-                  <p>SpeechBrain also supports Spoken Language Understanding, Language Modeling, Diarization, Speech Translation, Language Identification, Voice Activity Detection, Sound classification, Grapheme-to-Phoneme, and many others.</p>
-        				</div>
-        			</div>
               <div class="col-lg-4" style="margin:0 auto">
 			
 		
         				<div class="work_item">
         					<i class="lnr lnr-smile"></i>
         					<a href="#"><h4>Research & Development</h4></a>
-                  <p>SpeechBrain is designed to speed-up research and development of speech technologies.
-                    It is modular, flexible, easy-to-customize, and contains several recipes for popular datasets. Documentation and tutorials are here to
-                    help newcomers using SpeechBrain.</p>
+                  				<p>SpeechBrain is engineered to accelerate the research and development of Conversational AI technologies. It comes with modularity, flexibility, and easy customization, along with pre-built recipes for popular datasets. Extensive documentation and tutorials are available to support newcomers.</p>
         				</div>
         			</div>
               <div class="col-lg-4" style="margin:0 auto">
         				<div class="work_item">
         					<i><img src="img/hf.svg" style="width:60px"/></i>
         					<a href="#"><h4>HuggingFace!</h4></a>
-                  <p>SpeechBrain provides multiple pre-trained models that can
-                    easily be deployed with nicely designed interfaces.
-                    Transcribing, verifying speakers, enhancing speech, separating sources have never been that easy! </p>
+                  <p>SpeechBrain offers pre-trained models with user-friendly interfaces, making tasks like transcription, speaker verification, speech enhancement, and source separation easier than ever.</p>
         				</div>
         			</div>
         		</div>
