--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         				<div class="work_item">
         					<i class="lnr lnr-smile"></i>
         					<a href="#"><h4>Research & Development</h4></a>
-                  				<p>SpeechBrain is engineered to accelerate the research and development of Conversational AI technologies. It comes with modularity, flexibility, and easy customization, along with pre-built recipes for popular datasets. Extensive documentation and tutorials are available to support newcomers.</p>
+                  				<p>SpeechBrain is engineered to accelerate the research and development of Conversational AI technologies. It comes with pre-built recipes for popular datasets. Extensive documentation and tutorials are available to support newcomers.</p>
         				</div>
         			</div>
               <div class="col-lg-4" style="margin:0 auto">
