--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
         			</div>
         			<div class="col-lg-4">
         				<div class="work_item">
-        					<i class="lnr lnr-user"></i>
+        					<i class="lnr lnr-volume"></i>
         					<a href="#"><h4>Audio</h4></a>
                   				<p>SpeechBrain encompasses a wide range of audio technologies, including vocoding, audio augmentation, feature extraction, sound event detection, beamforming, and other multi-microphone signal processing capabilities.</p>
         				</div>
         			</div>
               <div class="col-lg-4">
         				<div class="work_item">
-        					<i class="lnr lnr-magic-wand"></i>
+        					<i class="lnr lnr-book"></i>
         					<a href="#"><h4>Text</h4></a>
                   				<p>SpeechBrain offers user-friendly tools for training Language Models, supporting technologies ranging from basic n-gram LMs to modern Large Language Models. Our platform seamlessly integrates them into speech processing pipelines and facilitates the creation of customizable chatbots. Additionally, we support machine translation, grapheme-to-phoneme technology, and more.</p>
         				</div>
@@ -142,7 +142,7 @@
 
 	     <div class="col-lg-4">
 		 <div class="work_item">
-		 	<i class="lnr lnr-volume-medium"></i>
+		 	<i class="lnr lnr-rocket"></i>
 		 	<a href="#"><h4>Technology</h4></a>
 		 	<p>SpeechBrain leverages the most advanced deep learning technologies, including methods for self-supervised learning, continual learning, diffusion models, Bayesian deep learning, and interpretable neural networks.</p>
 		 </div>
