--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         				<div class="work_item">
         					<i class="lnr lnr-book"></i>
         					<a href="#"><h4>Text</h4></a>
-                  				<p>SpeechBrain offers user-friendly tools for training Language Models, supporting technologies ranging from basic n-gram LMs to modern Large Language Models. Our platform seamlessly integrates them into speech processing pipelines and facilitates the creation of customizable chatbots. Additionally, we support machine translation, grapheme-to-phoneme technology, and more.</p>
+                  				<p>SpeechBrain offers user-friendly tools for training Language Models, supporting technologies ranging from basic n-gram LMs to modern Large Language Models. Our platform seamlessly integrates them into speech processing pipelines and facilitates the creation of customizable chatbots.</p>
         				</div>
         			</div>
 
