--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         	<div class="container">
 			<div class="main_title">
         			<h2>Key Features</h2>
-        			<p>SpeechBrain is a simple, flexible, well-documented, open-source conversational AI toolkit with competitive performance.</p>
+        			<p>Open, simple, flexible, well-documented, and with competitive performance.</p>
         		</div>
         		<div class="work_inner row">
         			<div class="col-lg-4">
