--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 								<div class="col-lg-6">
 									<div class="left_side_text">
 										<h3>Adapts to your needs.</h3>
-										<h6>SpeechBrain allows users to install either via PyPI to rapidly use the standard library or via a local install to view recipes and further explore the features of the toolkit.</h6>
+										<h6>You can install SpeechBrain via PyPI for quick access to its functionalities, or through a local install for accessing recipes and delving deeper into the toolkit..</h6>
 										<a class="main_btn" href="tutorial_basics.html">Get Started Now</a>
 									</div>
 								</div>
@@ -222,8 +222,7 @@
 								<div class="col-lg-6">
 									<div class="left_side_text">
 										<h3>A single command.</h3>
-										<h6>Every SpeechBrain recipe relies on a YAML file that summarizes all the functions and hyperparameters of the system.
-                      A single Python script combines them to implement the desired task.</h6>
+										<h6>Each SpeechBrain recipe defines all hyperparameters into a single YAML file. The training process is then orchestrated by a Python script.</h6>
 										<a class="main_btn" href="tutorial_basics.html">Get Started Now</a>
 									</div>
 								</div>
@@ -249,10 +248,9 @@
   								<div class="col-lg-6">
   									<div class="left_side_text">
   										<h3>Built for research.</h3>
-  										<h6>SpeechBrain is designed for research and development. Hence, flexibility and transparency are
-                      core concepts to facilitate our daily work. You can define your own deep learning models, losses, training / evaluation loops,
-                      input pipeline / transformations and use them handily without overhead.
-                      </h6>
+  										<h6>
+										SpeechBrain is designed for research and development. Hence, flexibility, transparency, and replicability are core concepts to enhance our daily workflows. Users can easily define custom deep learning models, losses, training/evaluation loops, and input pipelines/transformations, and easily integrate into existing pipelines.
+										</h6>
   										<a class="main_btn" href="tutorial_basics.html">Get Started Now</a>
   									</div>
   								</div>
