--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			
 		
         				<div class="work_item">
-        					<i class="lnr lnr-smile"></i>
+        					<i class="lnr lnr-magic-wand"></i>
         					<a href="#"><h4>Research & Development</h4></a>
                   				<p>SpeechBrain is engineered to accelerate the research and development of Conversational AI technologies. It comes with pre-built recipes for popular datasets. Extensive documentation and tutorials are available to support newcomers.</p>
         				</div>
