--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
         </section>
         <!--================End Home Banner Area =================-->
 
+<div class="alert alert-primary" role="alert">
+    <strong>🎉 SpeechBrain 1.0 is out!</strong> Check out what's new!
+    <a href="https://github.com/speechbrain/speechbrain/" class="alert-link">Visit GitHub Repository</a>
+</div>
+
         <!--================Work Area =================-->
         <section class="work_area p_120">
         	<div class="container">
@@ -197,7 +202,7 @@
 								<div class="col-lg-6">
 									<div class="left_side_text">
 										<h3>Adapts to your needs.</h3>
-										<h6>You can install SpeechBrain via PyPI for quick access to its functionalities, or through a local install for accessing recipes and delving deeper into the toolkit..</h6>
+										<h6>You can install SpeechBrain via PyPI for quick access to its functionalities, or through a local install for accessing recipes and delving deeper into the toolkit.</h6>
 										<a class="main_btn" href="tutorial_basics.html">Get Started Now</a>
 									</div>
 								</div>
