--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
         <!--================End Home Banner Area =================-->
 
 <div class="alert alert-primary" role="alert">
-    <strong>🎉 SpeechBrain 1.0 is out!</strong> Check out what's new!
-    <a href="https://github.com/speechbrain/speechbrain/" class="alert-link">Visit GitHub Repository</a>
+    🎉 SpeechBrain 1.0 is out.  <a href="https://colab.research.google.com/drive/1IEPfKRuvJRSjoxu22GZhb3czfVHsAy0s?usp=sharing"><strong> Check out what's new!</strong></a>
 </div>
 
         <!--================Work Area =================-->
