--- a/about.html
+++ b/about.html
@@ -79,21 +79,23 @@
         <!--================Work Area =================-->
         <section class="work_area p_120">
             <div class="main_title">
-              <h2>Community driven</h2>
-              <p class="justified large">We designed SpeechBrain to help researchers and developers. Its success depends on this large community:  anyone can clone the code, develop new functionalities, raise issues, or create a new discussion. 
+              <h2>🌐 Community driven</h2>
+              <p class="justified large">SpeechBrain has a large community of contributors. Anyone can contribute by cloning the code, developing new features, reporting issues, or joining discussions. 
  </p>
             </div>
             <div class="main_title">
-              <h2>Contributing to SpeechBrain</h2>
-              <p class="justified large"> Contributions can take various forms (see our <a href="contributing.html">dedicated page</a>):<br/>
-                  1. Researchers can propose and implement new functionalities through pull requests. To ensure high-quality standards, each new pull request will be reviewed by a core team member.<br/>
-                  2. Sponsors can contribute financially or with human resources by contacting us via <a href="mailto:speechbrainproject@gmail.com"> email. <a href="https://drive.google.com/file/d/1G1T2kbqMA1Rluzax5PcGa7TFV--mmKvX/view?usp=sharing">Check out the call for sponsors 2024!</a></a><br/><br/>
-                  <b>SpeechBrain needs you in order to evolve!</b>
-              </p>
+		<h2>💡 Contributing to SpeechBrain</h2>
+		<p class="justified large"> 
+		    Contributions to SpeechBrain come in various forms. See our <a href="contributing.html">dedicated page</a> for details:<br/><br/>
+		    1. Researchers: Propose and implement new functionalities through pull requests. Each new pull request undergoes review by a core team member to maintain high-quality standards.<br/>
+		    2. Sponsors: Contribute financially or with human resources by reaching out to us via <a href="mailto:speechbrainproject@gmail.com">email</a>. Also, check out our <a href="https://drive.google.com/file/d/1G1T2kbqMA1Rluzax5PcGa7TFV--mmKvX/view?usp=sharing">2024 call for sponsors</a>.<br/><br/>
+		    <b>SpeechBrain needs your support to evolve!</b>
+		</p>
+
 
             </div>
             <div class="main_title">
-              <h2>Referencing SpeechBrain</h2>
+              <h2>📖 Reference</h2>
               <div class="justified large">
                 <pre>
                   <code class="text">
@@ -118,10 +120,10 @@
             </div>
             <div class="main_title">
               <h2>Sponsors</h2>
-              <p class="justified large">
-                 Sponsoring allows us to keep expanding and maintaining SpeechBrain.
-                 If interested in a sponsorship, <a href="https://drive.google.com/file/d/1Ig9KRzQ--H-0ugmz2UXA_pdxTuLBGhtk/view?usp=sharing">Check out the call for sponsors 2023!</a>. Do not hesitate to contact us via <a href="mailto:speechbrainproject@gmail.com"> e-mail </a>.
-              </p>
+		<p class="justified large">
+		     Sponsoring allows us to keep expanding and maintaining SpeechBrain.
+		     If interested in a sponsorship, <a href="https://drive.google.com/file/d/1Ig9KRzQ--H-0ugmz2UXA_pdxTuLBGhtk/view?usp=sharing">Check out the call for sponsors 2023!</a>. Do not hesitate to contact us via <a href="mailto:speechbrainproject@gmail.com"> e-mail </a>.
+		</p>
 	      <br>
 	      <h3>Current Sponsors</h3>
               <div class="grid_container">
@@ -149,8 +151,8 @@
 
             <div class="main_title">
               <h2>Partners</h2>
-              <p class="justified large"> Partners are organizations that dedicate important human (or hardware resources) to the SpeechBrain project.
-                They are involved in the decision process by participating in meetings. </p>
+		<p class="justified large"> Partners are organizations that dedicate important human (or hardware resources) to the SpeechBrain project.
+		They are involved in the decision process by participating in meetings. </p>
               <div class="grid_container">
                 <div class="grid">
                   <div><img src="img/partners/logo_lia.png" alt=""></div>
@@ -165,12 +167,31 @@
               <p class="justified large"> We would like to thank the following individuals who contributed to SpeechBrain: </p>
             </div>
             <ul class="contributors-list">
-              <li>Mirco Ravanelli, Mila, Montréal (CA)</li>
-              <li>Titouan Parcollet, Avignon Université (LIA, FR)</li>
-              <li>Aku Rouhe, Aalto University (FI)</li>
+              <li>Mirco Ravanelli, Concordia University, Mila (CA)</li>
+              <li>Titouan Parcollet, Samsung, Cambridge University (UK)</li>
               <li>Peter Plantinga, Ohio State University (USA)</li>
-              <li>Elena Rastorgueva</li>
-              <li>Loren Lugosch, Mila, McGill University (CA)</li>
+	      <li>Aku Rouhe, Aalto University (FI)</li>
+	      <li>Adel Moumen, Avignon Université (LIA, FR) </li>
+	      <li>Sylvain de Langen, Avignon Université (LIA, FR) </li>
+	      <li>Cem Subakan, Mila, Laval University (CA)</li>
+	      <li>Luca Della Libera, Concordia  University, Mila (CA)</li>
+	      <li>Pooneh Mousavi, Concordia  University, Mila (CA)</li>	
+	      <li>Artem Ploujnikov, Université de Montréal, Mila (CA)</li>	
+	      <li>Davide Borra, University of Bologna (IT)</li>
+              <li>Francesco Paissan, Fondazione Bruno Kessler (IT)</li>
+	      <li>Mahed Mousavi, University of Trento (IT)</li>
+	      <li>Salah Zaiem, Telecom Paris (FR)</li>
+	      <li>Zeyu Zhao, University of Edinburgh (UK)</li> 
+	      <li> Pierre Champion,  INRIA (FR)</li> 
+	      <li> Sung-Lin Yeh, University of Edinburgh (UK)</li> 
+	      <li> Yingzhi Wang, Zaion (FR)</li> 
+	      <li> Xuechen Liu, Aalto University (FI)</li> 
+	      <li> Andreas Nautsch, Avignon Université (LIA, FR)</li> 
+	      <li> Pradnya Kandarkar, Concordia University</li>
+	      <li> Jarod Duret, Avignon Université</li>
+	      <li> Sangeet Sagar, Saarland University<li>
+	      <li> Gaëlle Laperrière, Avignon Université (LIA, FR) <li> 
+	      <li>Loren Lugosch, Mila, McGill University (CA)</li>
               <li>Nauman Dawalatabad, Indian Institute of Technology Madras (IN)</li>
               <li>Ju-Chieh Chou, National Taiwan University (TW)</li>
               <li>Abdel Heba, Linagora / University of Toulouse (IRIT, FR)</li>
@@ -182,12 +203,13 @@
               <li>Hwidong Na, Visiting Researcher Samsung SAIL (CA)</li>
               <li>Yan Gao, University of Cambridge (UK)</li>
               <li>Szu-Wei Fu, Academia Sinica (TW)</li>
-              <li>Cem Subakan, Mila, University of Montréal (CA)</li>
+	      <li>Elena Rastorgueva</li>
               <li>Jianyuan Zhong, University of Rochester (USA)<li>
               <li>Brecht Desplanques, Ghent University (BE)<li>
               <li>Jenthe Thienpondt, Ghent University (BE)<li>
 	      <li>Salima Mdhaffar, Avignon Université (LIA, FR)<li>
-              <li>Renato De Mori, University of McGill (CA), Avignon University (LIA, FR)</li>
+	      <li>Yannick Estève, Avignon University (LIA, FR)</li>
+              <li>Renato De Mori, McGill University (CA), Avignon University (LIA, FR)</li>
               <li>Yoshua Bengio, Mila, University of Montréal (CA)</li>
             </ul>
           </div>
