--- a/about.html
+++ b/about.html
@@ -188,8 +188,8 @@
 	      <li> Xuechen Liu, Aalto University (FI)</li> 
 	      <li> Andreas Nautsch, Avignon Université (LIA, FR)</li> 
 	      <li> Pradnya Kandarkar, Concordia University</li>
-	      <li> Jarod Duret, Avignon Université</li>
-	      <li> Sangeet Sagar, Saarland University<li>
+	      <li> Jarod Duret, Avignon Université (LIA, FR</li>
+	      <li> Sangeet Sagar, Saarland University (GE)<li>
 	      <li> Gaëlle Laperrière, Avignon Université (LIA, FR) <li> 
 	      <li>Loren Lugosch, Mila, McGill University (CA)</li>
               <li>Nauman Dawalatabad, Indian Institute of Technology Madras (IN)</li>
