--- a/about.html
+++ b/about.html
@@ -135,6 +135,9 @@
 		  <div><img src="img/sponsors/logo_nle.png" alt="nle" style="max-width: 200px; padding-top:80px"></div>
 		  <div><img class="img-partner" src="img/sponsors/logo_mila_small.png" style="padding-top:60px;"></div>
 		  <div><img src="img/partners/logo_lia.png" alt="lia" style="max-width: 175px; padding-top:20px;"></div>
+		  <div><img src="img/partners/Concordia-University.png" alt="lia" style="max-width: 500px; padding-top:60px;"></div>
+
+			
                 </div>
               </div>
 	      <br>    
@@ -156,6 +159,7 @@
               <div class="grid_container">
                 <div class="grid">
                   <div><img src="img/partners/logo_lia.png" alt=""></div>
+		  <div><img src="img/partners/Concordia-University.png" alt=""></div>
                   <div><img src="img/partners/logo_cambridge.png" alt=""></div>
                   <div><img src="img/partners/logo_sherbrooke.jpg" alt=""></div>
                 </div>
