--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
               </div>
             </div>
             <div class="main_title">
-              <h2>License</h2>
+              <h2> 📜 License</h2>
               <p class="justified large">SpeechBrain is released under the <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache license, version 2.0</a>. The Apache license is a popular <em>BSD-like</em> license. SpeechBrain can be redistributed for free, even for commercial purposes, although you can not take off the license headers (and under some circumstances you may have to distribute a license document). Apache is not a <em>viral</em> license like the GPL, which forces you to release your modifications to the source code. Also note that this project has no connection to the Apache Foundation, other than that we use the same license terms.</p><br/>
 
               <p class="justified large">From a legal and copyright point of view, SpeechBrain has been created by Dr. Mirco Ravanelli and Dr. Titouan Parcollet. There is no legal institution associated as an <em> owner </em> of SpeechBrain.</p>
@@ -125,7 +125,7 @@
 		     If interested in a sponsorship, <a href="https://drive.google.com/file/d/1Ig9KRzQ--H-0ugmz2UXA_pdxTuLBGhtk/view?usp=sharing">Check out the call for sponsors 2023!</a>. Do not hesitate to contact us via <a href="mailto:speechbrainproject@gmail.com"> e-mail </a>.
 		</p>
 	      <br>
-	      <h3>Current Sponsors</h3>
+	      <h3>🎗️ Sponsors</h3>
               <div class="grid_container">
                 <div class="grid">
 	          <div><img src="img/sponsors/logo_badu.png" alt="baidu" style="max-width: 500px; padding-top:60px;"></div>
