--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </section>
         <!--================End Home Banner Area =================-->
 
-<div class="alert alert-primary" role="alert">
+<div class="alert alert-primary" role="alert" style="text-align: center; font-size: 24px;">
     🎉 SpeechBrain 1.0 is out.  <a href="https://colab.research.google.com/drive/1IEPfKRuvJRSjoxu22GZhb3czfVHsAy0s?usp=sharing"><strong> Check out what's new!</strong></a>
 </div>
 
