--- a/about.html
+++ b/about.html
@@ -119,13 +119,12 @@
               <p class="justified large">From a legal and copyright point of view, SpeechBrain has been created by Dr. Mirco Ravanelli and Dr. Titouan Parcollet. There is no legal institution associated as an <em> owner </em> of SpeechBrain.</p>
             </div>
             <div class="main_title">
-              <h2>Sponsors</h2>
+              <h2>>🎗️ Sponsors</h2>
 		<p class="justified large">
 		     Sponsoring allows us to keep expanding and maintaining SpeechBrain.
 		     If interested in a sponsorship, <a href="https://drive.google.com/file/d/1Ig9KRzQ--H-0ugmz2UXA_pdxTuLBGhtk/view?usp=sharing">Check out the call for sponsors 2023!</a>. Do not hesitate to contact us via <a href="mailto:speechbrainproject@gmail.com"> e-mail </a>.
 		</p>
 	      <br>
-	      <h3>🎗️ Sponsors</h3>
               <div class="grid_container">
                 <div class="grid">
 	          <div><img src="img/sponsors/logo_badu.png" alt="baidu" style="max-width: 500px; padding-top:60px;"></div>
@@ -135,9 +134,7 @@
 		  <div><img src="img/sponsors/logo_nle.png" alt="nle" style="max-width: 200px; padding-top:80px"></div>
 		  <div><img class="img-partner" src="img/sponsors/logo_mila_small.png" style="padding-top:60px;"></div>
 		  <div><img src="img/partners/logo_lia.png" alt="lia" style="max-width: 175px; padding-top:20px;"></div>
-		  <div><img src="img/partners/Concordia-University.png" alt="lia" style="max-width: 500px; padding-top:60px;"></div>
-
-			
+		  <div><img src="img/partners/Concordia-University.png" alt="Concordia" style="max-width: 250px; padding-top:60px;"></div>
                 </div>
               </div>
 	      <br>    
@@ -167,7 +164,7 @@
             </div>
             <div class="main_title">
               <h2>Contributors</h2>
-              <p class="justified large"> We would like to thank the following individuals who contributed to SpeechBrain: </p>
+              <p class="justified large"> We would like to thank the following contributors: </p>
             </div>
             <ul class="contributors-list">
               <li>Mirco Ravanelli, Concordia University, Mila (CA)</li>
