--- a/contributing.html
+++ b/contributing.html
@@ -112,18 +112,37 @@
 
             <div class="main_title">
               <h2>Contributors</h2>
-              <p class="justified large"> In this section we thanks all the peoples that contributed to SpeechBrain. </p>
+              <p class="justified large"> We would like to thank the following contributors: </p>
             </div>
             <ul class="contributors-list">
-              <li>Mirco Ravanelli, Mila, Montréal (CA)</li>
-              <li>Titouan Parcollet, Avignon Université (LIA, FR)</li>
-              <li>Aku Rouhe, Aalto University (FI)</li>
+              <li>Mirco Ravanelli, Concordia University, Mila (CA)</li>
+              <li>Titouan Parcollet, Samsung, Cambridge University (UK)</li>
               <li>Peter Plantinga, Ohio State University (USA)</li>
-              <li>Elena Rastorgueva</li>
-              <li>Loren Lugosch, Mila, McGill University (CA)</li>
+	      <li>Aku Rouhe, Aalto University (FI)</li>
+	      <li>Adel Moumen, Avignon Université (LIA, FR) </li>
+	      <li>Sylvain de Langen, Avignon Université (LIA, FR) </li>
+	      <li>Cem Subakan, Mila, Laval University (CA)</li>
+	      <li>Luca Della Libera, Concordia  University, Mila (CA)</li>
+	      <li>Pooneh Mousavi, Concordia  University, Mila (CA)</li>	
+	      <li>Artem Ploujnikov, Université de Montréal, Mila (CA)</li>	
+	      <li>Davide Borra, University of Bologna (IT)</li>
+              <li>Francesco Paissan, Fondazione Bruno Kessler (IT)</li>
+	      <li>Mahed Mousavi, University of Trento (IT)</li>
+	      <li>Salah Zaiem, Telecom Paris (FR)</li>
+	      <li>Zeyu Zhao, University of Edinburgh (UK)</li> 
+	      <li> Pierre Champion,  INRIA (FR)</li> 
+	      <li> Sung-Lin Yeh, University of Edinburgh (UK)</li> 
+	      <li> Yingzhi Wang, Zaion (FR)</li> 
+	      <li> Xuechen Liu, Aalto University (FI)</li> 
+	      <li> Andreas Nautsch, Avignon Université (LIA, FR)</li> 
+	      <li> Pradnya Kandarkar, Concordia University</li>
+	      <li> Jarod Duret, Avignon Université (LIA, FR</li>
+	      <li> Sangeet Sagar, Saarland University (GE)<li>
+	      <li> Gaëlle Laperrière, Avignon Université (LIA, FR) <li> 
+	      <li>Loren Lugosch, Mila, McGill University (CA)</li>
               <li>Nauman Dawalatabad, Indian Institute of Technology Madras (IN)</li>
               <li>Ju-Chieh Chou, National Taiwan University (TW)</li>
-              <li>Abdel Heba, University of Toulouse (IRIT, FR)</li>
+              <li>Abdel Heba, Linagora / University of Toulouse (IRIT, FR)</li>
               <li>Francois Grondin, University of Sherbrooke (CA)</li>
               <li>William Aris, University of Sherbrooke (CA)</li>
               <li>Chien-Feng Liao, National Taiwan University (TW)</li>
@@ -132,11 +151,13 @@
               <li>Hwidong Na, Visiting Researcher Samsung SAIL (CA)</li>
               <li>Yan Gao, University of Cambridge (UK)</li>
               <li>Szu-Wei Fu, Academia Sinica (TW)</li>
-              <li>Cem Subakan, Mila, University of Montréal (CA)</li>
+	      <li>Elena Rastorgueva</li>
               <li>Jianyuan Zhong, University of Rochester (USA)<li>
               <li>Brecht Desplanques, Ghent University (BE)<li>
               <li>Jenthe Thienpondt, Ghent University (BE)<li>
-              <li>Renato De Mori, University of McGill (CA), Avignon University (LIA, FR)</li>
+	      <li>Salima Mdhaffar, Avignon Université (LIA, FR)<li>
+	      <li>Yannick Estève, Avignon University (LIA, FR)</li>
+              <li>Renato De Mori, McGill University (CA), Avignon University (LIA, FR)</li>
               <li>Yoshua Bengio, Mila, University of Montréal (CA)</li>
             </ul>
           </div>
