--- a/contributing.html
+++ b/contributing.html
@@ -151,7 +151,7 @@
               <li>Hwidong Na, Visiting Researcher Samsung SAIL (CA)</li>
               <li>Yan Gao, University of Cambridge (UK)</li>
               <li>Szu-Wei Fu, Academia Sinica (TW)</li>
-	      <li>Elena Rastorgueva</li>
+	      <li>Elena Rastorgueva, University of Cambridge (UK)</li>
               <li>Jianyuan Zhong, University of Rochester (USA)<li>
               <li>Brecht Desplanques, Ghent University (BE)<li>
               <li>Jenthe Thienpondt, Ghent University (BE)<li>
