--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <body>
 
         <!--================Header Menu Area =================-->
-        <header class="header_area">
+       <header class="header_area">
             <div class="main_menu">
             	<nav class="navbar navbar-expand-lg navbar-light">
 					<div class="container box_1620">
@@ -35,23 +35,23 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav justify-content-center">
-                <li class="nav-item active"><a class="nav-link" href="sb_summit2023.html">Online SpeechBrain Summit</a></li>
-								<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-								<li class="nav-item"><a class="nav-link" href="#">About SpeechBrain</a>
-                  <li class="nav-item"><a class="nav-link" href="contributing.html">Contributing</a>
-                <li class="nav-item"><a class="nav-link" href="https://speechbrain.readthedocs.io/en/latest/index.html">Documentation</a>
+								<li class="nav-item active"><a class="nav-link" href="">Home</a></li>
+								<li class="nav-item"><a class="nav-link" href="about.html">About SpeechBrain</a>
+								<li class="nav-item"><a class="nav-link" href="contributing.html">Contributing</a>
+								<li class="nav-item"><a class="nav-link" href="https://speechbrain.readthedocs.io/en/latest/index.html">Documentation</a>
 								<li class="nav-item submenu dropdown">
 									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tutorials</a>
-                  <ul class="dropdown-menu">
-                    <li class="nav-item"><a class="nav-link" href="tutorial_basics.html">SpeechBrain Basics</a></li>
-                    <li class="nav-item"><a class="nav-link" href="tutorial_advanced.html">SpeechBrain Advanced</a></li>
-                    <li class="nav-item"><a class="nav-link" href="tutorial_asr.html">Speech Recognition</a></li>
-                    <li class="nav-item"><a class="nav-link" href="tutorial_separation.html">Source Separation</a></li>
-                    <li class="nav-item"><a class="nav-link" href="tutorial_enhancement.html">Speech Enhancement</a></li>
-		                <li class="nav-item"><a class="nav-link" href="tutorial_classification.html">Speech Classification</a></li>
-                    <li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
-		                <li class="nav-item"><a class="nav-link" href="tutorial_nn.html">Neural Architectures</a></li>
+									<ul class="dropdown-menu">
+                    							<li class="nav-item"><a class="nav-link" href="tutorial_basics.html">SpeechBrain Basics</a></li>
+                    							<li class="nav-item"><a class="nav-link" href="tutorial_advanced.html">SpeechBrain Advanced</a></li>
+                    							<li class="nav-item"><a class="nav-link" href="tutorial_asr.html">Speech Recognition</a></li>
+                    							<li class="nav-item"><a class="nav-link" href="tutorial_separation.html">Source Separation</a></li>
+                    							<li class="nav-item"><a class="nav-link" href="tutorial_enhancement.html">Speech Enhancement</a></li>
+		    							<li class="nav-item"><a class="nav-link" href="tutorial_classification.html">Speech Classification</a></li>
+                    							<li class="nav-item"><a class="nav-link" href="tutorial_processing.html">Speech Processing</a></li>
+		    							<li class="nav-item"><a class="nav-link" href="tutorial_nn.html">Neural Architectures</a></li>
 									</ul>
+								<li class="nav-item"><a class="nav-link" href="https://github.com/speechbrain/benchmarks">Benchmarks</a>
 								</li>
 							</ul>
 						</div>
