--- a/about.html
+++ b/about.html
@@ -87,12 +87,11 @@
 		<h2>💡 Contributing to SpeechBrain</h2>
 		<p class="justified large"> 
 		    Contributions to SpeechBrain come in various forms. See our <a href="contributing.html">dedicated page</a> for details:<br/><br/>
-		    1. Researchers: Propose and implement new functionalities through pull requests. Each new pull request undergoes review by a core team member to maintain high-quality standards.<br/>
-		    2. Sponsors: Contribute financially or with human resources by reaching out to us via <a href="mailto:speechbrainproject@gmail.com">email</a>. Also, check out our <a href="https://drive.google.com/file/d/1G1T2kbqMA1Rluzax5PcGa7TFV--mmKvX/view?usp=sharing">2024 call for sponsors</a>.<br/><br/>
+		    1. <b>Researchers:</b> Propose and implement new functionalities through pull requests. Each new pull request undergoes review by a core team member to maintain high-quality standards.<br/><br/>
+		    
+		    2. <b>Sponsors:</b> Contribute financially or with human resources by reaching out to us via <a href="mailto:speechbrainproject@gmail.com">email</a>. Also, check out our <a href="https://drive.google.com/file/d/1G1T2kbqMA1Rluzax5PcGa7TFV--mmKvX/view?usp=sharing">2024 call for sponsors</a>.<br/><br/>
 		    <b>SpeechBrain needs your support to evolve!</b>
 		</p>
-
-
             </div>
             <div class="main_title">
               <h2>📖 Reference</h2>
