--- a/contributing.html
+++ b/contributing.html
@@ -84,12 +84,11 @@
 	      <br>
 <h3>Zen of SpeechBrain</h3>
 <p class="justified large">SpeechBrain can be used for research, academic, commercial, and non-commercial purposes. If you want to contribute, keep in mind the following features:</p>
-<ul>
-    <li><b>Simplicity:</b> The code must be easy to understand, even for students or users who are not professional programmers or speech researchers. Design your code to be easily readable. Given alternatives with the same level of performance, choose the simplest one.</li>
-    <li><b>Modularity:</b> Write your code to be modular and compatible with other functionalities of the toolkit. Develop models that can naturally interconnect with each other.</li>
-    <li><b>Efficiency:</b> The code should be as efficient as possible. Maximize the use of PyTorch native operations.</li>
-    <li><b>Documentation:</b> Writing rich and comprehensive documentation is crucial. Include docstrings with runnable examples, similar to PyTorch code.</li>
-</ul>
+   <b>Simplicity:</b> The code must be easy to understand, even for students or users who are not professional programmers or speech researchers. Design your code to be easily readable. Given alternatives with the same level of performance, choose the simplest one<br/><br/>
+   <b>Modularity:</b> Write your code to be modular and compatible with other functionalities of the toolkit. Develop models that can naturally interconnect with each other.<br/><br/>
+   <b>Efficiency:</b> The code should be as efficient as possible. Maximize the use of PyTorch native operations.<br/><br/>
+   <b>Documentation:</b> Writing rich and comprehensive documentation is crucial. Include docstrings with runnable examples, similar to PyTorch code.<br/><br/>
+</p>
 
 <h3>How to get my code into SpeechBrain?</h3>
 <p class="justified large">SpeechBrain is hosted on <a href="https://github.com/speechbrain/speechbrain">GitHub</a>. Contributing involves three steps:</p>
