--- a/contributing.html
+++ b/contributing.html
@@ -80,33 +80,35 @@
         <section class="work_area p_120">
             <div class="main_title">
               <h2>Contributing to SpeechBrain</h2>
-	     <p class="justified large">The goal is to collectively write an open-source toolkit for Conversational AI. It is crucial to develop a homogeneous set of libraries, all following a consistent set of guidelines outlined in our <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html">documentation</a>.</p>
+              <p class="justified large"> The goal is to collectively write a set of open-source libraries for Conversational AI.
+                It is crucial to write a set of homogeneous libraries that are all compliant with a set of guidelines described
+                in our <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html"> documentation </a>.
+              </p>
 	      <br>
-<h3>Zen of SpeechBrain</h3>
-<p class="justified large">SpeechBrain can be used for research, academic, commercial, and non-commercial purposes. If you want to contribute, keep in mind the following features:</p>
-   <b>Simplicity:</b> The code must be easy to understand, even for students or users who are not professional programmers or speech researchers. Design your code to be easily readable. Given alternatives with the same level of performance, choose the simplest one<br/><br/>
-   <b>Modularity:</b> Write your code to be modular and compatible with other functionalities of the toolkit. Develop models that can naturally interconnect with each other.<br/><br/>
-   <b>Efficiency:</b> The code should be as efficient as possible. Maximize the use of PyTorch native operations.<br/><br/>
-   <b>Documentation:</b> Writing rich and comprehensive documentation is crucial. Include docstrings with runnable examples, similar to PyTorch code.<br/><br/>
-</p>
-
-<h3>How to get my code into SpeechBrain?</h3>
-<p class="justified large">SpeechBrain is hosted on <a href="https://github.com/speechbrain/speechbrain">GitHub</a>. Contributing involves three steps:</p>
-<ol>
-    <li><b>Fork and clone:</b> Fork and clone the <a href="https://github.com/speechbrain/speechbrain">repository</a>, and install our test suite as detailed in <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html">the documentation</a>.</li>
-    <li><b>Write and test:</b> Write your code and test it thoroughly. Commit your changes to your fork, ensuring the pre-commit tests pass. Then, open a pull request on the official repository.</li>
-    <li><b>Review and integrate:</b> Participate in the review process. Each pull request is reviewed by one or two reviewers. Integrate their feedback into your code. Once reviewers are satisfied, they will merge your pull request into the official code.</li>
-</ol>
-<p class="justified large">Further details about this process, including steps for installing the tests, are provided in <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html">the documentation</a>.</p>
-
-<h3>How can I help?</h3>
-<p class="justified large">You can contribute in various ways, such as:</p>
-<ul>
-    <li>Adding new recipes</li>
-    <li>Developing new models</li>
-    <li>Integrating new external functionalities</li>
-    <li>Identifying and solving issues/bugs</li>
-</ul>
+              <h3> Zen of SpeechBrain </h3>
+              <p class="justified large"> SpeechBrain could be used for research, academic, commercial, non-commercial purposes.If you want to contribute, keep in mind the following features:
+	      <br/><br/>
+             <b>Simplicity:</b> the code must be easy to understand even by students or users that are not professional programmers or speech researchers.
+ Design your code such that it can be easily read. Given alternatives with the same level of performance, code the simplest one. <br/><br/>
+                <b>Modularity:</b> Write your code to be modular and well-fitting with the other functionalities of the toolkit. The idea is to develop a bunch of models that can be naturally interconnected with each other. <br/><br/>
+                 <b>Efficiency:</b> The code should be as efficient as possible. Contributors should maximize the use of pytorch native operations
+<br/><br/>
+		      <b>Documentation:</b> Given the goals of SpeechBrain, writing rich and good documentation is a crucial step. Write docstrings with runnable examples (as done in PyTorch code).
+	<br/><br/>      
+              <h3> How to get my code into SpeechBrain? </h3>
+              <p class="justified large"> SpeechBrain is hosted via <a href="https://github.com/speechbrain/speechbrain"> GitHub </a>. Contributing requires three steps: <br/><br/>
+                <b>1.</b> Fork, clone the <a href="https://github.com/speechbrain/speechbrain">repository</a> and install our test suite as detailed in <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html"> the documentation </a>. <br/>
+                <b>2.</b> Write your code and test it properly. Commit your changes to your fork with our pre-commit tests to ensure tests are passing.
+                Then open a pull request on the official repository.<br/>
+                <b>3.</b> Participate in the review process. Each pull request is reviewed by one or two reviewers.
+                Please integrate their feedback into your code. Once reviewers are happy with your pull request, they will merge it into the official code. <br/><br/>
+                <b>Details about this process (i.e including steps for installing the tests) are given in <a href="https://speechbrain.readthedocs.io/en/latest/contributing.html"> the documentation </a>.</b>
+              </p>
+	 <br/><br/>
+              <h3> How can I help? </h3>
+              <p class="justified large">  Examples of contributions include new recipes, new models, new external functionalities, solving issues/bugs.
+              </p>
+            </div>
 
 
             <div class="main_title">
