--- a/tutorial_processing.html
+++ b/tutorial_processing.html
@@ -61,7 +61,9 @@
             </div>
         </header>
         <!--================Header Menu Area =================-->
-
+	<div class="alert alert-primary" role="alert" style="text-align: center; font-size: 24px;">
+	    🎉 SpeechBrain 1.0 is out.  <a href="https://colab.research.google.com/drive/1IEPfKRuvJRSjoxu22GZhb3czfVHsAy0s?usp=sharing"><strong> Check out what's new!</strong></a>
+	</div>
         <!--================Home Banner Area =================-->
         <section class="home_banner_area blog_banner">
             <div class="banner_inner d-flex align-items-center">
